# Pure2D

./: .gitignore  Audio.h  CMakeLists.txt  Define.h  Graphics.h  Init.cpp  Init.h  LICENSE  Math.h  Pure2D.h  PureMath.h  README.md  RenderTexture.cpp  RenderTexture.h  Sound.cpp  Sound.h  System.h  Window.h  meson.build  pure2d-config.cmake.in
Audio/: Audio.cpp  Audio.h  AudioSource.cpp  AudioSource.h  Listener.cpp  Listener.h  Music.cpp  Music.h  Sound.cpp  Sound.h  SoundBuffer.cpp  SoundBuffer.h
Engine/: Game.cpp  Game.h
Examples/: ImguiSample.cpp  RenderQuad.cpp
Graphics/: Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Color.h  Font.cpp  Font.h  Mesh.cpp  Mesh.h  Quad.cpp  Quad.h  RenderTexture.cpp  RenderTexture.h  Renderable.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vertex.cpp  Vertex.h
Math/: Constants.h  Convert.h  Manip.cpp  Manip.h  Mat4.cpp  Mat4.h  MatrixTransform.cpp  MatrixTransform.h  Rect.h  Vec2.h  Vec3.h  Vec4.h
Private/: Convert.cpp  Convert.h  Debug.h  ErrorHandling.cpp  ErrorHandling.h  FileIO.cpp  FileIO.h  FreeType.cpp  FreeType.h  GlContext.cpp  GlContext.h  Shaders.h  Util.h
System/: AssetManager.cpp  AssetManager.h  DataType.h  Defer.h  Logging.cpp  Logging.h  NonCopyable.h  Time.cpp  Time.h  Util.h
Window/: Keyboard.cpp  Keyboard.h  Window.cpp  Window.h  WindowEvent.h
build_scripts/: move_to_bin.py
